
## 128-bit C++ API:
pc_int128_t pi(pc_int128_t x);
pc_int128_t nth_prime(pc_int128_t n);

## 128-bit C API:
pc_int128_t primecount_pi_128(pc_int128_t x);
pc_int128_t primecount_nth_prime_128(pc_int128_t n);


# OTHER NON-BREAKING CHANGES:

* api.cpp: Fix broken 128-bit nth prime function.
* util.cpp: Fix undefined behavior in to_string().
* calculator.hpp: Add code to detect integer overflows.
* LoadBalancerS2.cpp: Faster critical section.
* nth_prime.cpp: Improve status output.
* AC.cpp: Improved instruction level parallelism.
* AC_libdivide.cpp: Improved instruction level parallelism.
* D.cpp: Refactor runtime dispatch to optimized SIMD algorithm.
* S2_hard.cpp: Refactor runtime dispatch to optimized SIMD algorithm.
* pi_lmo_parallel.cpp: Add support for runtime dispatch to optimized SIMD algorithm.
* Move S2_easy_libdivide.cpp code into S2_easy.cpp.
* Move AC_libdivide.cpp code into AC.cpp.
* CMakeLists.txt: Set CMAKE_VISIBILITY_INLINES_HIDDEN = ON by default.

Changes in primecount-7.20, 2025-11-03

* CMakeLists.txt: Support building libprimecount.dll using MinGW.
* pi_gourdon.cpp: Quickly verify pi(x) results.
* pi_deleglise_rivat.cpp: Quickly verify pi(x) results.
* pi_lmo_parallel.cpp: Quickly verify pi(x) results.
* CmdOptions.cpp: Add --double-check option.
* build_mingw64_arm64.sh: Enable ARM SVE for Mingw-w64 on ARM64.
* doc/Easy-Special-Leaves.pdf: Converted Markdown to LaTeX.
* doc/Hard-Special-Leaves.pdf: Converted Markdown to LaTeX.
* doc/Partial-Sieve-Function.pdf: Converted Markdown to LaTeX.
* ci.yml: Add WebAssembly/Emscripten test.
* BUILD.md: Add WebAssembly/Emscripten build instructions.
* README.md: Updated Algorithms section.

Changes in primecount-7.19, 2025-06-04

* nth_prime.cpp: Add 128-bit nth_prime function.
* nth_prime_sieve.hpp: New sieving algo for nth_prime(n).
* primecount.h: Improved 128-bit C API using portable pc_int128_t struct.
* primecount.hpp: Improved 128-bit C++ API using portable pc_int128_t struct.